// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionContent /> should render as closed 1`] = `
<AccordionContent
  className={null}
  id="some-id"
  open={false}
>
  <ForwardRef
    aria-hidden={true}
    className={
      Object {
        "data-css-apm51k": "",
      }
    }
    id="some-id"
    style={
      Object {
        "hook": "useSpring return value",
      }
    }
  >
    <div
      aria-hidden={true}
      className={
        Object {
          "data-css-apm51k": "",
        }
      }
      id="some-id"
      style={
        Object {
          "hook": "useSpring return value",
        }
      }
    >
      <div>
        <div
          className="css-yh2lvw"
        >
          <div
            id="test"
          >
            Some Child
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</AccordionContent>
`;

exports[`<AccordionContent /> should render as open 1`] = `
<AccordionContent
  className={null}
  id="some-id"
  open={true}
>
  <ForwardRef
    aria-hidden={false}
    className={
      Object {
        "data-css-apm51k": "",
      }
    }
    id="some-id"
    style={
      Object {
        "hook": "useSpring return value",
      }
    }
  >
    <div
      aria-hidden={false}
      className={
        Object {
          "data-css-apm51k": "",
        }
      }
      id="some-id"
      style={
        Object {
          "hook": "useSpring return value",
        }
      }
    >
      <div>
        <div
          className="css-yh2lvw"
        >
          <div
            id="test"
          >
            Some Child
          </div>
        </div>
      </div>
    </div>
  </ForwardRef>
</AccordionContent>
`;
